--- a/Dockerfile.pypy
+++ b/Dockerfile.pypy
@@ -5,9 +5,7 @@ MAINTAINER Adam Wallner <adam.wallner@gmail.com>
 COPY portredirector.py /opt/
 COPY docker_entry.sh /opt/
 
-RUN \
-    # Install needed packages
-    apt-get update && apt-get install -y iptables \
+RUN apt-get update && apt-get install -y iptables \
     # Make entry script working with pypy
     && ln -s /usr/local/bin/pypy3 /usr/local/bin/python3 \
     # Clean unneeded packages
